# network_task

./: CMakeLists.txt  README.md  make_source_md.sh  refactoring.txt  source_files.md  uml_diagrams.md
client/: CMakeLists.txt  main.cpp
client/include/: client.h  devicestatus.h  loggenerator.h  networkmetrics.h
client/src/: client.cpp  devicestatus.cpp  loggenerator.cpp  networkmetrics.cpp
server/: CMakeLists.txt  main.cpp
server/GUI/include/: mainwindow.h  settingsdialog.h
server/GUI/src/: mainwindow.cpp  settingsdialog.cpp
server/Server/include/: serverthread.h  serverworker.h
server/Server/src/: serverthread.cpp  serverworker.cpp
